Fixed landing page image and alignment

--- a/public/landingPage.css
+++ b/public/landingPage.css
@@ -124,6 +124,12 @@
         backdrop-filter: opacity(20%);
         border-radius: 16px;
       }
+      .center {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+      }
 
       .left-section {
         float: left;
